          version 1.201 from CPAN.
        - first round of mega-api-change.
        - dropped a few prefixes (PROC_ from RUN_INTERACTIVE etc.. where
          the new names would have a GIMP_ prefix).
        - updated to new commandline options.
        - updated enums.pl (And therefore, enumerations).
        - applied 5.004 compatibility patch by artie@kmfms.com.

1.201 Thu Aug 24 23:44:43 CEST 2000
	** LAST VERSION THAT WORKS WITH 1.0 **
	- s/gimp_plugin_domain_add/gimp_plugin_domain_register/
	- really moved sethspin into <Image>/Filters (neo) 
	- moved sethspin back to Filters/Animation (sjb)
        - fixed problem in Net.pm/try_connect (AF_LOCAL vs. PF_UNIX, or
          "sysv rules the world, but sun shines everyhwere".
        - added ... to hopefully all plug-ins that open a dialog.
	- make clean wrongly deleted po/Makefile.
	- po/Makefile.PL left temporary files around.
        - trimmed examples/logulator down by two thirds.
        - installing map_to_gradient again, as it is needed by firetext,
          until fire has been re-written.
        - applied patch by Ar't <artie@kmfms.com> that fixes a lot of
          perl5.004 compatibility issues and even identifies the
          buggy perl version that causes pxgettext to not work!
        - do yet another compile/link flags rotation.
        - replaced find -path by grep 'Cause -path seems to be a gnu extension.

1.2   Thu May 11 18:55:13 CEST 2000
	- image types updated to reflect gimp's reality.
        - updated perlotine.
        - fixed logulator (bugs are actually in the script-fu parts).
        - moved gimp_drawable_bounds from Gimp::Util to Gimp.
        - applied patch to logulator by <mikem@enet.it>.
        - added examples/giflogo.
        - do not install examples/gap-vcr.
        - added new sethspin, with slight changes.
        - do not install "feedback".
        - updated examples/xachlego.
        - added examples/blended2, examples/translogo.
        - removed examples/giflogo.